--- a/app/package.json
+++ b/app/package.json
@@ -15,16 +15,17 @@
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "expo": "~48.0.11",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.0",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.72.3",
     "react-native-fbsdk": "^3.0.0",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-reanimated": "~2.14.4",
+    "react-native-gesture-handler": "^2.12.1",
+    "react-native-reanimated": "~3.3.0",
     "react-native-reanimated-carousel": "^3.3.0",
-    "react-native-safe-area-context": "^4.5.1",
-    "react-native-screens": "^3.20.0"
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
